--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   },
   "dependencies": {
     "ethers": "^6.11.1",
+    "dotenv": "^16.4.5",
     "@hono/node-server": "^1",
     "hono": "^4",
     "frog": "latest"
